# rust-default-template

./: Cargo.toml
